@@ -864,6 +864,7 @@ register_language ('name' => 'cppasm',
 # Fortran 77
 register_language ('name' => 'f77',
 		   'Name' => 'Fortran 77',
+		   'config_vars' => ['F77'],
 		   'linker' => 'F77LINK',
 		   'link' => '$(F77LD) $(AM_FFLAGS) $(FFLAGS) $(AM_LDFLAGS) $(LDFLAGS) -o $@',
 		   'flags' => ['FFLAGS'],
@@ -880,6 +881,7 @@ register_language ('name' => 'f77',
 # Fortran
 register_language ('name' => 'fc',
 		   'Name' => 'Fortran',
+		   'config_vars' => ['FC'],
 		   'linker' => 'FCLINK',
 		   'link' => '$(FCLD) $(AM_FCFLAGS) $(FCFLAGS) $(AM_LDFLAGS) $(LDFLAGS) -o $@',
 		   'flags' => ['FCFLAGS'],
