@@ -1,5 +1,11 @@
 2006-08-30  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* automake.in: Fortran 77 and Fortran should require variables
+	F77 resp. FC to be defined, and suggest the respective Autoconf
+	macros otherwise.
+	* tests/fort1.test: New test.
+	* tests/Makefile.am: Update.
+
 	* tests/ext.test: Add extensions f95, F90, F95.
 
 2006-08-30  Alexandre Duret-Lutz  <adl@gnu.org>
